2008-07-03  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 0.138

	* Fixed a long-standing bug related to handling of active nodes in
	default rules.

	* Fixed display behaviour of \conditional, \unequals and \regex.

2008-07-02  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed paste behaviour in the GUI (put cursor after pasted text,
	disable selection).

	* Fixed a bug related to canonicalisation of expressions with
	pattern indices.

2008-06-28  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Moved to GIT.

2008-06-27  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Separated the source code for the GUI into several files to make
	it more readable.

	* Added documentation for reserved node names as well as
	context-sensitive help for them.

2008-06-26  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Added default properties for \commutator to make working with
	commutators somewhat less non-intuitive. Removed hard-coded
	\commutator references in the main code.

	* Fixed a bug with @canonicalise and NonCommuting tensors.

2008-06-24  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Made a rare error in dummy index renaming produce a normal error
	rather than a kernel panic.

	* Made selections survive pageup/down and home/end.

2008-06-22  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 0.136.

	* LaTeX errors now halt a 'run' or 'run from/to cursor'.

	* Fixed a long-standing bug related to re-declaration of list
	properties. 

2008-06-21  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Added autocompletion of greek TeX names as well as some assorted
	symbols.

	* Released 0.135

	* Added auto-completion of algorithm and property names
	with TAB in the GUI.

2008-06-20  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 0.134 as development version.

	* Fixed a bug in the GUI which made it busy-wait forever when a
	running mode would be selected in a cell preceding an error cell.
