@@ -79,6 +79,8 @@ manipulator::manipulator()
 	algorithms["@collect_terms"]  =new algo_info(&create<collect_terms>);
 	algorithms["@collect_factors"]=new algo_info(&create<collect_factors>);
 	algorithms["@factorise"]      =new algo_info(&create<factorise>);
+	algorithms["@factor_in"]      =new algo_info(&create<factor_in>);
+	algorithms["@factor_out"]     =new algo_info(&create<factor_out>);
 	algorithms["@canonicalise"]   =new algo_info(&create<canonicalise>);
 	algorithms["@reduce"]         =new algo_info(&create<reduce>);
 	algorithms["@ratrewrite"]     =new algo_info(&create<ratrewrite>);
